stbtt: add another kind of get bitmap function to reduce memory fragementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 idf_component_register(
         SRCS
+            "external/includes/stb_truetype.h"
             "includes/font_view.hpp"
             "font_cacher.cpp" "includes/font_cacher.hpp"
         INCLUDE_DIRS
-            "includes"
+            "includes" "external/includes"
 )
