--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 idf_component_register(
         SRCS
             "external/includes/stb_truetype.h"
-            "includes/font_view.hpp"
+            "external/libschrift/schrift.c" "external/libschrift/schrift.h"
+            "includes/stb_font_view.hpp"
             "font_cacher.cpp" "includes/font_cacher.hpp"
         INCLUDE_DIRS
-            "includes" "external/includes"
+            "includes" "external/includes" "external/libschrift"
 )
