--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 idf_component_register(
         SRCS
-            "external/includes/stb_truetype.h"
-            "font_view.cpp" "includes/font_view.hpp"
+            "includes/font_view.hpp"
             "font_cacher.cpp" "includes/font_cacher.hpp"
+            "font_disk_cacher.cpp" "includes/font_disk_cacher.hpp"
         INCLUDE_DIRS
             "includes" "external/includes"
 
