--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,7 @@ idf_component_register(
             "includes/font_view.hpp"
             "font_cacher.cpp" "includes/font_cacher.hpp"
             "font_disk_cacher.cpp" "includes/font_disk_cacher.hpp"
-            "stbtt_mempool.c" "includes/stbtt_mempool.h"
-            "external/tlsf.c" "external/includes/tlsf.h"
+            "external/font_tlsf.c" "external/includes/font_tlsf.h"
         INCLUDE_DIRS
             "includes" "external/includes"
 
