font_view: resolve multiple def issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(
             "font_cacher.cpp" "includes/font_cacher.hpp"
             "font_disk_cacher.cpp" "includes/font_disk_cacher.hpp"
             "external/font_tlsf.c" "external/includes/font_tlsf.h"
+            "font_view.cpp"
         INCLUDE_DIRS
             "includes" "external/includes"
 
